Refactor Home Page: 2x2 grid layout, mobile optimization, and color refinements

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -59,14 +59,14 @@
     <!-- MAIN -->
     <main class="base-main">
       <div class="matrix-grid">
-        <a href="#" class="matrix-card card-blue border-glow adaptive-shadow area-privato">
+        <a href="area_privata.html" class="matrix-card card-blue border-glow adaptive-shadow area-privato">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">lock</span></div>
           <div class="card-text-block">
             <h3>Privato</h3>
             <p>Cassaforte Personale</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-green border-glow adaptive-shadow area-azienda">
+        <a href="lista_aziende.html" class="matrix-card card-green border-glow adaptive-shadow area-azienda">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">apartment</span></div>
           <div class="card-text-block">
             <h3>Azienda</h3>
@@ -74,14 +74,15 @@
           </div>
         </a>
 
-        <a href="#" class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
+        <a href="scadenze.html?filter=in_scadenza"
+          class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
           <div class="card-text-block">
             <h3>Scadenze</h3>
             <p>Controlla i prossimi impegni</p>
           </div>
         </a>
-        <a href="#" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
+        <a href="scadenze.html?filter=urgenti" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
           <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
           <div class="card-text-block">
             <h3>Urgenze</h3>
