--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -76,18 +76,33 @@
 
         <a href="scadenze.html?filter=in_scadenza"
           class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
-          <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
+          <div class="flex justify-between items-start w-full mb-2">
+            <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
+            <span id="upcoming-count-badge" class="badge-count" style="opacity: 0;">
+              <span id="upcoming-count">0</span>
+            </span>
+          </div>
           <div class="card-text-block">
             <h3>Scadenze</h3>
-            <p>Controlla i prossimi impegni</p>
+            <p>I prossimi 30 giorni</p>
           </div>
+          <!-- Mini List Dinamica -->
+          <div id="upcoming-list-container" class="micro-dashboard-list"></div>
         </a>
+
         <a href="scadenze.html?filter=urgenti" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
-          <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
+          <div class="flex justify-between items-start w-full mb-2">
+            <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
+            <span id="expired-count-badge" class="badge-count" style="opacity: 0;">
+              <span id="expired-count">0</span>
+            </span>
+          </div>
           <div class="card-text-block">
             <h3>Urgenze</h3>
-            <p>Documenti scaduti o mancanti</p>
+            <p>Documenti già scaduti</p>
           </div>
+          <!-- Mini List Dinamica -->
+          <div id="expired-list-container" class="micro-dashboard-list"></div>
         </a>
       </div>
     </main>
