Fix: Header/Footer centrati su desktop, rimosso doppio padding griglia e rimosso ultimo stile inline (badge opacity)

--- a/Frontend/public/home_page.html
+++ b/Frontend/public/home_page.html
@@ -76,7 +76,7 @@
           class="matrix-card card-orange border-glow adaptive-shadow area-scadenze">
           <div class="flex justify-between items-start w-full mb-2">
             <div class="matrix-icon-box"><span class="material-symbols-outlined">calendar_month</span></div>
-            <span id="upcoming-count-badge" class="badge-count" style="opacity: 0;">
+            <span id="upcoming-count-badge" class="badge-count badge-initial-hide">
               <span id="upcoming-count">0</span>
             </span>
           </div>
@@ -91,7 +91,7 @@
         <a href="scadenze.html?filter=urgenti" class="matrix-card card-red border-glow adaptive-shadow area-urgenze">
           <div class="flex justify-between items-start w-full mb-2">
             <div class="matrix-icon-box"><span class="material-symbols-outlined">warning</span></div>
-            <span id="expired-count-badge" class="badge-count" style="opacity: 0;">
+            <span id="expired-count-badge" class="badge-count badge-initial-hide">
               <span id="expired-count">0</span>
             </span>
           </div>
